fix: text cursor not visible in criteria inputs

--- a/frontend/src/components/HighlightTextArea/index.module.scss
+++ b/frontend/src/components/HighlightTextArea/index.module.scss
@@ -24,6 +24,7 @@
   overflow: hidden;
   text-wrap: nowrap;
   display: inline-block;
+  padding-left: 1px;
 
   // &:not(:focus) {
   //   text-overflow: ellipsis;
